--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pandas = "*"
 matplotlib = "*"
+pandas = "*"
+numpy = "*"
 sklearn = "*"
 mediapipe = "*"
 
